--- a/admin.html
+++ b/admin.html
@@ -22,34 +22,32 @@
         <button onclick="document.getElementById('corsWarning').style.display='none'" style="margin-left: 20px; padding: 5px 10px; background: white; color: #ff4444; border: none; border-radius: 5px; cursor: pointer;">×</button>
     </div>
     <div class="admin-container">
-        <!-- Horizontal Navigation Bar -->
-        <header class="admin-header">
-            <div class="admin-header-content">
-                <div class="admin-logo">
-                    <h2>Admin Panel</h2>
-                </div>
-                <nav class="admin-nav">
-                    <a href="#brands" class="nav-item active" data-section="brands">
-                        <i class="fas fa-tag"></i> Brands
-                    </a>
-                    <a href="#flavours" class="nav-item" data-section="flavours">
-                        <i class="fas fa-palette"></i> Flavours
-                    </a>
-                    <a href="#products" class="nav-item" data-section="products">
-                        <i class="fas fa-box"></i> Products
-                    </a>
-                    <a href="#database" class="nav-item" data-section="database">
-                        <i class="fas fa-database"></i> Database Upload
-                    </a>
-                </nav>
-                <div class="admin-header-actions">
-                    <a href="index.html" class="view-site-btn">Go to Main Menu</a>
-                    <button onclick="adminLogout()" class="logout-btn">
-                        <i class="fas fa-sign-out-alt"></i> Logout
-                    </button>
-                </div>
+        <!-- Vertical Sidebar Navigation -->
+        <aside class="admin-sidebar">
+            <div class="admin-logo">
+                <h2>Admin Panel</h2>
             </div>
-        </header>
+            <nav class="admin-nav">
+                <a href="#brands" class="nav-item active" data-section="brands">
+                    <i class="fas fa-tag"></i> Brands
+                </a>
+                <a href="#flavours" class="nav-item" data-section="flavours">
+                    <i class="fas fa-palette"></i> Flavours
+                </a>
+                <a href="#products" class="nav-item" data-section="products">
+                    <i class="fas fa-box"></i> Products
+                </a>
+                <a href="#database" class="nav-item" data-section="database">
+                    <i class="fas fa-database"></i> Database Upload
+                </a>
+            </nav>
+            <div class="admin-sidebar-actions">
+                <a href="index.html" class="view-site-btn">Go to Main Menu</a>
+                <button onclick="adminLogout()" class="logout-btn">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                </button>
+            </div>
+        </aside>
 
         <!-- Main Content -->
         <main class="admin-content">
