--- a/products.html
+++ b/products.html
@@ -411,27 +411,26 @@
 
 
         .flavors-grid-container {
-            display: grid;
-            grid-auto-flow: column;
-            grid-auto-columns: auto;
+            display: flex;
+            flex-direction: row;
             gap: 0;
             width: 100%;
             max-width: 100%;
             box-sizing: border-box;
             padding: 0;
             margin: 0;
-            align-items: start;
+            align-items: flex-start;
         }
 
         .flavors-column {
             display: grid;
             grid-template-columns: auto 1fr;
-            gap: 0.4rem 0.75rem;
+            gap: 0.5rem 1rem;
             align-items: center;
             min-width: 0;
             padding: 0;
             margin: 0;
-            width: fit-content;
+            flex-shrink: 0;
         }
 
         .flavors-separator {
@@ -443,8 +442,6 @@
             border-radius: 0;
             flex-shrink: 0;
             height: 100%;
-            margin-left: 0;
-            margin-right: 0;
         }
 
         .flavor-card {
@@ -455,11 +452,11 @@
             background: linear-gradient(135deg, #2563EB, #3B82F6);
             color: #FFFFFF;
             font-weight: 900;
-            font-size: 0.75rem;
-            padding: 0.35rem 0.6rem;
+            font-size: 0.95rem;
+            padding: 0.5rem 0.8rem;
             border-radius: 5px;
             text-align: center;
-            min-width: 50px;
+            min-width: 60px;
             box-shadow: 0 3px 6px rgba(37, 99, 235, 0.5), 0 0 0 1px rgba(255, 255, 255, 0.1) inset;
             letter-spacing: 0.5px;
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -472,10 +469,10 @@
         .flavor-name {
             color: #1E293B;
             font-weight: 700;
-            font-size: 0.8rem;
-            line-height: 1.3;
+            font-size: 1.05rem;
+            line-height: 1.5;
             text-align: left;
-            padding: 0.35rem 0;
+            padding: 0.5rem 0;
             word-break: break-word;
             overflow-wrap: break-word;
         }
@@ -521,15 +518,15 @@
         /* Desktop (1200px and above) - Default layout */
         @media (min-width: 1200px) {
             .flavors-grid-container {
-                grid-auto-columns: minmax(220px, auto);
+                gap: 0;
             }
             .flavor-id {
-                font-size: 0.7rem;
-                padding: 0.3rem 0.55rem;
-                min-width: 45px;
+                font-size: 0.85rem;
+                padding: 0.45rem 0.7rem;
+                min-width: 50px;
             }
             .flavor-name {
-                font-size: 0.75rem;
+                font-size: 0.95rem;
             }
             .flavors-column {
                 gap: 0.35rem 0.65rem;
@@ -539,15 +536,15 @@
         /* Large Tablets and Small Desktop (1024px - 1199px) */
         @media (min-width: 1024px) and (max-width: 1199px) {
             .flavors-grid-container {
-                grid-auto-columns: minmax(200px, auto);
+                gap: 0;
             }
             .flavor-id {
-                font-size: 0.7rem;
-                padding: 0.3rem 0.5rem;
-                min-width: 42px;
+                font-size: 0.85rem;
+                padding: 0.45rem 0.7rem;
+                min-width: 50px;
             }
             .flavor-name {
-                font-size: 0.75rem;
+                font-size: 0.95rem;
             }
             .flavors-column {
                 gap: 0.35rem 0.6rem;
@@ -557,18 +554,18 @@
         /* iPad and Tablets (768px - 1023px) */
         @media (min-width: 768px) and (max-width: 1023px) {
             .flavors-grid-container {
-                grid-auto-columns: minmax(180px, auto);
+                gap: 0;
             }
             .flavor-id {
-                font-size: 0.65rem;
-                padding: 0.28rem 0.48rem;
-                min-width: 40px;
+                font-size: 0.85rem;
+                padding: 0.45rem 0.7rem;
+                min-width: 55px;
             }
             .flavor-name {
-                font-size: 0.7rem;
+                font-size: 0.95rem;
             }
             .flavors-column {
-                gap: 0.3rem 0.55rem;
+                gap: 0.45rem 0.85rem;
             }
         }
 
@@ -675,16 +672,16 @@
             }
 
             .flavors-grid-container {
-                grid-auto-columns: minmax(160px, auto);
+                gap: 0;
             }
 
             .flavor-id {
-                font-size: 0.65rem;
-                padding: 0.28rem 0.45rem;
-                min-width: 38px;
+                font-size: 0.8rem;
+                padding: 0.4rem 0.65rem;
+                min-width: 50px;
             }
             .flavor-name {
-                font-size: 0.7rem;
+                font-size: 0.9rem;
             }
             .flavors-column {
                 gap: 0.3rem 0.5rem;
@@ -754,15 +751,15 @@
                 grid-auto-columns: minmax(150px, auto);
             }
             .flavor-id {
-                font-size: 0.65rem;
-                padding: 0.25rem 0.42rem;
-                min-width: 36px;
+                font-size: 0.8rem;
+                padding: 0.38rem 0.6rem;
+                min-width: 48px;
             }
             .flavor-name {
-                font-size: 0.68rem;
+                font-size: 0.85rem;
             }
             .flavors-column {
-                gap: 0.28rem 0.48rem;
+                gap: 0.4rem 0.7rem;
             }
         }
 
@@ -862,12 +859,12 @@
             }
 
             .flavor-id {
-                font-size: 0.6rem;
-                padding: 0.25rem 0.4rem;
-                min-width: 34px;
+                font-size: 0.75rem;
+                padding: 0.35rem 0.55rem;
+                min-width: 45px;
             }
             .flavor-name {
-                font-size: 0.65rem;
+                font-size: 0.8rem;
             }
             .flavors-column {
                 gap: 0.25rem 0.45rem;
