--- a/admin.html
+++ b/admin.html
@@ -172,7 +172,7 @@
                             <div class="form-group">
                                 <label>Assign to Product <span style="color: var(--medium-gray); font-weight: normal; font-size: 0.9rem;">(Select one product at a time)</span></label>
                                 <select id="flavourProducts" class="input-field">
-                                    <option value="">Loading products...</option>
+                                    <option value="">Select Product</option>
                                 </select>
                                 <small style="color: var(--text-color); font-size: 0.85rem; display: block; margin-top: 0.5rem;">
                                     <i class="fas fa-info-circle"></i> Each product-flavor-ID combination creates a separate flavor entry. If the same flavor name exists in different products with different IDs, they will be stored as separate entries. To add the same flavor to multiple products, create them separately.
