--- a/admin.html
+++ b/admin.html
@@ -311,7 +311,14 @@
 
             <!-- Database Upload Section -->
             <section id="database" class="content-section">
-                <h2>Import Database File</h2>
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
+                    <h2 style="margin: 0;">Database Management</h2>
+                    <button type="button" onclick="exportDataToExcel()" class="btn btn-primary" style="display: inline-flex; align-items: center; gap: 0.5rem; background: linear-gradient(135deg, #4CAF50, #45a049);">
+                        <i class="fas fa-file-excel"></i>
+                        <span>Export to Excel</span>
+                    </button>
+                </div>
+                <h3 style="margin-bottom: 1rem;">Import Database File</h3>
                 <div class="form-container">
                     <div class="upload-info">
                         <p><strong>Import database data from Excel file (.xlsx) to Firebase Firestore.</strong></p>
